Fix the extra padding issue on gallery layers which was causing horizontal scrolling

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -103,8 +103,6 @@ Site Structure
 }
 
 .layer-wrap {
-  margin-left: -15px;
-  margin-right: -15px;
 	padding-top: 1.5rem;
 	padding-bottom: 1.5rem;
 
