--- a/scss/_wordpress.scss
+++ b/scss/_wordpress.scss
@@ -63,17 +63,18 @@
 	@extend .d-block;
 }
 
-.gallery-layer {
-	@extend .mx-0;
-}
-
 .gallery {
-	padding-left: 10px;
-	padding-right: 10px;
-	@extend .row;
+  padding-left: 10px;
+  padding-right: 10px;
+  flex-wrap: wrap;
+
+  @include media-breakpoint-down(sm) {
+    padding-left: 5px;
+    padding-right: 5px;
+  }
 
 	.gallery-item {
-		@extend .mb-0;
+		margin-bottom: 0;
 		padding: 5px !important;
 		@extend .card;
 		@extend .img-fluid;
